Fix and update